// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toEmbedMatch should get failed test due to bot returned equal messages that matches isnot(true) 1`] = `
Object {
  "message": "    
    expected: embed message from bot do not match with expectation
    received: both returned and expectation embed messages matches
",
  "pass": false,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch should get success test due to bot returned equal messages that matches 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch should return a failed test due to invalid parameter (null) 1`] = `
Object {
  "message": "    
    expected: parameter to be an object of type IMesageEmbed 
    received: null
",
  "pass": false,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to color not match (isNot true) 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to color not match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to description match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to fields match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to files match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to footer match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to image match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to thumbnailUrl match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to timestamp match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to title match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to title not match (isnot true) 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;

exports[`testing toEmbedMatch testing each property of messageEmbed should get passed due to url match 1`] = `
Object {
  "pass": true,
  "testName": "toEmbedMatch",
}
`;
